alea from public

--- a/public/alea/interface/index.html
+++ b/public/alea/interface/index.html
@@ -7,8 +7,6 @@
   </head>
 
   <body>
-    <script src="/alea/sketch2.js"></script>
-    <script src="/alea/xenobot.js"></script>
-    <script src="/alea/plastik.js"></script>
+    <script src="/alea/interface/interfejs.js"></script>
   </body>
 </html>
