--- a/public/404/index.html
+++ b/public/404/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/404/style.css">
     <script src="/404/jquery-3.6.1.min.js"></script>
-    <link rel="icon"  href="404icon.jpg">
+    <link rel="icon"  href="/404/404icon.jpg">
     <title>404</title>
 
   </head>
