--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
-  <html>
+<html>
   <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
-  <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="hackathonHumanTech2022_about.js"></script>
-  <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
+    <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
+    <script
+      language="javascript"
+      type="text/javascript"
+      src="/about/libraries/p5.min.js"
+    ></script>
+    <script
+      language="javascript"
+      type="text/javascript"
+      src="/about/hackathonHumanTech2022_about.js"
+    ></script>
+    <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
-  <!-- This line removes any default padding and style.
+    <!-- This line removes any default padding and style.
   You might only need one of these values set. -->
 
-  <style>
-
-  body {
-    padding: 0; margin: 0; 
-
-}
-
-</style>
+    <style>
+      body {
+        padding: 0;
+        margin: 0;
+      }
+    </style>
   </head>
 
-  <body>
-
-  </body>
-  </html>
+  <body></body>
+</html>
